# stream_tagger

./: .gitignore  README.md  add_hidden_channels.py  config.py  pop_chn_list.py  setup.cfg  update_chn_list.py
stream_tagger/: __init__.py  __main__.py  admin_config.py  bot.py  help_strings.py  stream.py  streams.py  tag_command.py  tags.py  update_channels.py  utils.py  ytdl_extractor.py
