[metadata]
name = livestream-tagger
author = "OdielDomanie"
version = 0.1
description = Discord bot for tagging live streams
url = https://github.com/OdielDomanie/stream_tagger
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.10
install_requires =
    discord.py @ git+https://github.com/Rapptz/discord.py.git
    python-dotenv
    orjson
    python-dateutil
    yt-dlp

packages = stream_tagger
